Fix permanent scrollbars #3 (#7)
Fixes #3. Also fixes an issue where the save buttons were hiding below the bottom of the screen even if there wasn't enough content to push them there.

--- a/assets/css/src/custom.css
+++ b/assets/css/src/custom.css
@@ -122,7 +122,7 @@ div[id^='headlessui-menu-items-'] {
 
 .default-layout {
 
-    @apply grid w-screen h-screen;
+    @apply grid w-full h-screen;
 
     @media screen {
 
@@ -137,7 +137,7 @@ div[id^='headlessui-menu-items-'] {
         &-side {
 
             .layout-topmenu + .layout {
-                @apply h-screen;
+                height: calc(100vh - 4rem);
             }
 
             &-inline {
